--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.59.18",
     "@tanstack/react-table": "^8.20.5",
@@ -41,7 +43,7 @@
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "dropdown-menu": "^0.1.1",
@@ -50,9 +52,12 @@
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-currency-input-field": "^3.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-remove-scroll": "^2.6.0",
+    "react-select": "^5.8.3",
     "react-use": "^17.5.1",
     "shadcn-ui": "^0.2.3",
     "sonner": "^1.6.1",
