--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "react-papaparse": "^4.4.0",
     "react-remove-scroll": "^2.6.0",
     "react-select": "^5.8.3",
