--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@shadcn/ui": "^0.0.4",
@@ -63,6 +64,7 @@
     "react-remove-scroll": "^2.6.0",
     "react-select": "^5.8.3",
     "react-use": "^17.5.1",
+    "recharts": "^2.13.3",
     "shadcn-ui": "^0.2.3",
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
