--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -53,7 +54,9 @@
     "lucide-react": "^0.454.0",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
+    "plaid": "^30.0.0",
     "query-string": "^9.1.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
