--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-plaid-link": "^3.6.1",
     "react-remove-scroll": "^2.6.0",
     "react-select": "^5.8.3",
+    "react-spinners": "^0.15.0",
     "react-use": "^17.5.1",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.2.3",
